# handler/customer_handler.go
@@ -6,7 +6,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"os"
 	"path/filepath"
-	"scylla/entity"
+	"scylla/dto"
 	"scylla/pkg/exception"
 	"scylla/pkg/helper"
 	"scylla/pkg/utils"
@@ -24,29 +24,42 @@ func NewCustomerHandler(customerService service.CustomerService) *CustomerHandle
 	}
 }
 
+func (handler *CustomerHandler) Route(app *fiber.App) {
+	qParamId := ":customerId"
+	customerRouter := app.Group("/api/v1/customers")
+	customerRouter.Get("", handler.FindAll)
+	customerRouter.Get("/"+qParamId, handler.FindById)
+	customerRouter.Get("/export", handler.Export)
+	customerRouter.Post("/import", handler.Import)
+	customerRouter.Post("", handler.Create)
+	customerRouter.Post("/batch", handler.CreateBatch)
+	customerRouter.Patch("/"+qParamId, handler.Update)
+	customerRouter.Delete("/batch", handler.DeleteBatch)
+}
+
 // Note            godoc
 //
 //	@Summary		Create customer
 //	@Description	Create customer.
-//	@Param			data	formData	entity.CreateCustomerRequest	true	"create customer"
+//	@Param			data	formData	dto.CreateCustomerRequest	true	"create customer"
 //	@Produce		application/json
 //	@Tags			customers
-//	@Success		201	{object}	entity.JsonCreated{data=nil}"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}				"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}				"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}	"Internal server error"
+//	@Success		201	{object}	dto.JsonCreated{data=nil}   "Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}			"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}				"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}	"Internal server error"
 //	@Router			/customers [post]
 func (handler *CustomerHandler) Create(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	request := entity.CreateCustomerRequest{}
+	request := dto.CreateCustomerRequest{}
 	err := ctx.BodyParser(&request)
 	helper.ErrorPanic(err)
 
 	handler.customerService.Create(c, request)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:    fiber.StatusCreated,
 		Status:  "Created",
 		Message: "Created Successful",
@@ -59,25 +72,25 @@ func (handler *CustomerHandler) Create(ctx *fiber.Ctx) error {
 //
 //	@Summary		Create customer batch
 //	@Description	Create customer batch.
-//	@Param			data	body	entity.CreateCustomerBatchRequest	true	"create customer batch"
+//	@Param			data	body	dto.CreateCustomerBatchRequest	true	"create customer batch"
 //	@Produce		application/json
 //	@Tags			customers
-//	@Success		201	{object}	entity.JsonCreated{data=nil}"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}				"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}				"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}	"Internal server error"
+//	@Success		201	{object}	dto.JsonCreated{data=nil}       "Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}			"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}				"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}	"Internal server error"
 //	@Router			/customers/batch [post]
 func (handler *CustomerHandler) CreateBatch(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	request := entity.CreateCustomerBatchRequest{}
+	request := dto.CreateCustomerBatchRequest{}
 	err := ctx.BodyParser(&request)
 	helper.ErrorPanic(err)
 
 	handler.customerService.CreateBatch(c, request)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:    fiber.StatusCreated,
 		Status:  "Created",
 		Message: "Created Batch Successful",
@@ -90,24 +103,24 @@ func (handler *CustomerHandler) CreateBatch(ctx *fiber.Ctx) error {
 //
 //	@Summary		update customer
 //	@Description	update customer.
-//	@Param			data		body	entity.UpdateCustomerRequest	true	"update customer"
-//	@Param			customerId	path	string							true	"customer_id"
+//	@Param			data		body	dto.UpdateCustomerRequest	true	"update customer"
+//	@Param			customerId	path	string						true	"customer_id"
 //	@Produce		application/json
 //	@Tags			customers
-//	@Success		200	{object}	entity.JsonSuccess{data=nil}		"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}				"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}				"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}	"Internal server error"
+//	@Success		200	{object}	dto.JsonSuccess{data=nil}		"Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}			"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}				"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}	"Internal server error"
 //	@Router			/customers/{customerId} [patch]
 func (handler *CustomerHandler) Update(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	request := entity.UpdateCustomerRequest{}
+	request := dto.UpdateCustomerRequest{}
 	err := ctx.BodyParser(&request)
 	helper.ErrorPanic(err)
 
-	var params entity.CustomerParams
+	var params dto.CustomerParams
 
 	if err := ctx.ParamsParser(&params); err != nil {
 		panic(exception.NewBadRequestHandler(err.Error()))
@@ -117,7 +130,7 @@ func (handler *CustomerHandler) Update(ctx *fiber.Ctx) error {
 
 	handler.customerService.Update(c, request)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:    fiber.StatusOK,
 		Status:  "OK",
 		Message: "Update Successful",
@@ -131,25 +144,25 @@ func (handler *CustomerHandler) Update(ctx *fiber.Ctx) error {
 //
 //	@Summary		Delete batch customer
 //	@Description	Delete batch customer.
-//	@Param			data	body	entity.DeleteBatchCustomerRequest	true	"delete batch customer"
+//	@Param			data	body	dto.DeleteBatchCustomerRequest	true	"delete batch customer"
 //	@Produce		application/json
 //	@Tags			customers
-//	@Success		200	{object}	entity.JsonSuccess{data=nil}		"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}				"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}				"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}	"Internal server error"
+//	@Success		200	{object}	dto.JsonSuccess{data=nil}		"Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}			"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}				"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}	"Internal server error"
 //	@Router			/customers/batch [delete]
 func (handler *CustomerHandler) DeleteBatch(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	request := entity.DeleteBatchCustomerRequest{}
+	request := dto.DeleteBatchCustomerRequest{}
 	err := ctx.BodyParser(&request)
 	helper.ErrorPanic(err)
 
 	handler.customerService.DeleteBatch(c, request)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:    fiber.StatusOK,
 		Status:  "OK",
 		Message: "Delete Batch Successful",
@@ -166,16 +179,16 @@ func (handler *CustomerHandler) DeleteBatch(ctx *fiber.Ctx) error {
 //	@Description	get customer by id.
 //	@Produce		application/json
 //	@Tags			customers
-//	@Success		200	{object}	entity.JsonSuccess{data=entity.CustomerResponse{}}	"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}								"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}								"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}					"Internal server error"
+//	@Success		200	{object}	dto.JsonSuccess{data=dto.CustomerResponse{}}    "Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}							"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}								"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}					"Internal server error"
 //	@Router			/customers/{customerId} [get]
 func (handler *CustomerHandler) FindById(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	var params entity.CustomerParams
+	var params dto.CustomerParams
 
 	if err := ctx.ParamsParser(&params); err != nil {
 		panic(exception.NewBadRequestHandler(err.Error()))
@@ -183,7 +196,7 @@ func (handler *CustomerHandler) FindById(ctx *fiber.Ctx) error {
 
 	data := handler.customerService.FindById(c, params)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:   fiber.StatusOK,
 		Status: "OK",
 		Data:   data,
@@ -197,6 +210,7 @@ func (handler *CustomerHandler) FindById(ctx *fiber.Ctx) error {
 //	@Summary		Get all customers.
 //	@Description	Get all customers.
 //	@Produce		application/json
+//	@Param			all		    query	string	false	"true/false"
 //	@Param			limit		query	string	false	"limit"
 //	@Param			page		query	string	false	"page"
 //	@Param			username	query	string	false	"username"
@@ -205,24 +219,24 @@ func (handler *CustomerHandler) FindById(ctx *fiber.Ctx) error {
 //	@Param			end_date	query	string	false	"end_date"
 //	@Param			sort		query	string	false	"sort"
 //	@Tags			customers
-//	@Success		200	{object}	entity.Response{data=[]entity.CustomerResponse{}}	"Data"
-//	@Failure		400	{object}	entity.JsonBadRequest{}								"Validation error"
-//	@Failure		404	{object}	entity.JsonNotFound{}								"Data not found"
-//	@Failure		500	{object}	entity.JsonInternalServerError{}					"Internal server error"
+//	@Success		200	{object}	dto.Response{data=[]dto.CustomerResponse{}}	    "Data"
+//	@Failure		400	{object}	dto.JsonBadRequest{}							"Validation error"
+//	@Failure		404	{object}	dto.JsonNotFound{}								"Data not found"
+//	@Failure		500	{object}	dto.JsonInternalServerError{}					"Internal server error"
 //	@Router			/customers [get]
-func (handler *CustomerHandler) FindAllPaging(ctx *fiber.Ctx) error {
+func (handler *CustomerHandler) FindAll(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	var dataFilter entity.CustomerQueryFilter
+	var dataFilter dto.CustomerQueryFilter
 
 	if err := ctx.QueryParser(&dataFilter); err != nil {
 		panic(exception.NewBadRequestHandler(err.Error()))
 	}
 
-	response, paging := handler.customerService.FindAllPaging(c, dataFilter)
+	response, paging := handler.customerService.FindAll(c, dataFilter)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:   fiber.StatusOK,
 		Status: "OK",
 		Data:   response,
@@ -238,20 +252,21 @@ func (handler *CustomerHandler) FindAllPaging(ctx *fiber.Ctx) error {
 // @Description	Export Excel customer.
 // @Produce		application/json
 // @Tags		customers
+// @Param		all     	query		string	true	"true"
 // @Param		start_date	query		string	false	"start_date"
 // @Param		end_date	query		string	false	"end_date"
 // @Param		username	query		string	false	"username"
 // @Param		email		query		string	false	"email"
-// @Success		200			{object}	entity.JsonSuccess{data=string}"Data"
-// @Failure		400			{object}	entity.JsonBadRequest{}				"Validation error"
-// @Failure		404			{object}	entity.JsonNotFound{}				"Data not found"
-// @Failure		500			{object}	entity.JsonInternalServerError{}	"Internal server error"
+// @Success		200			{object}	dto.JsonSuccess{data=string}    "Data"
+// @Failure		400			{object}	dto.JsonBadRequest{}			"Validation error"
+// @Failure		404			{object}	dto.JsonNotFound{}				"Data not found"
+// @Failure		500			{object}	dto.JsonInternalServerError{}	"Internal server error"
 // @Router		/customers/export [get]
 func (handler *CustomerHandler) Export(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	var dataFilter entity.CustomerQueryFilter
+	var dataFilter dto.CustomerQueryFilter
 
 	if err := ctx.QueryParser(&dataFilter); err != nil {
 		panic(exception.NewBadRequestHandler(err.Error()))
@@ -281,17 +296,17 @@ func (handler *CustomerHandler) Export(ctx *fiber.Ctx) error {
 // @Produce		application/json
 // @Accept		multipart/form-data
 // @Tags		customers
-// @Param		file	formData	file	true	"Import Excel customer"
-// @Success		200		{object}	entity.JsonSuccess{data=string}"Data"
-// @Failure		400		{object}	entity.JsonBadRequest{}				"Validation error"
-// @Failure		404		{object}	entity.JsonNotFound{}				"Data not found"
-// @Failure		500		{object}	entity.JsonInternalServerError{}	"Internal server error"
+// @Param		file	formData	file	true	  "Import Excel customer"
+// @Success		200		{object}	dto.JsonSuccess{data=string}    "Data"
+// @Failure		400		{object}	dto.JsonBadRequest{}			"Validation error"
+// @Failure		404		{object}	dto.JsonNotFound{}				"Data not found"
+// @Failure		500		{object}	dto.JsonInternalServerError{}	"Internal server error"
 // @Router		/customers/import [post]
 func (handler *CustomerHandler) Import(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	request := new(entity.UploadCustomerRequest)
+	request := new(dto.UploadCustomerRequest)
 
 	file, err := ctx.FormFile("file")
 	if err != nil {
@@ -308,7 +323,7 @@ func (handler *CustomerHandler) Import(ctx *fiber.Ctx) error {
 	error := handler.customerService.Import(c, *request)
 	helper.ErrorPanic(error)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:    fiber.StatusOK,
 		Status:  "Ok",
 		Message: "Import Successful",
