# handler/dms_handler.go
@@ -3,7 +3,7 @@ package handler
 import (
 	"context"
 	"github.com/gofiber/fiber/v2"
-	"scylla/entity"
+	"scylla/dto"
 	"scylla/pkg/exception"
 	"scylla/pkg/helper"
 	"scylla/pkg/utils"
@@ -21,6 +21,10 @@ func NewDmsHandler(service service.DmsService) *DmsHandler {
 	}
 }
 
+func (handler *DmsHandler) Route(app *fiber.App) {
+	app.Get("api/v1/vehicles", handler.GetVehicle)
+}
+
 // Note             godoc
 //
 //	@Summary		Get All vehicles.
@@ -30,13 +34,13 @@ func NewDmsHandler(service service.DmsService) *DmsHandler {
 //	@Param			page		query	string	false	"page"
 //	@Param			is_active	query	string	false	"is_active"
 //	@Tags			vehicle
-//	@Success		200	{object}	entity.Response{data=[]entity.VehicleResponse}	"Data"
+//	@Success		200	{object}	dto.Response{data=[]dto.VehicleResponse}	"Data"
 //	@Router			/vehicles [get]
 func (handler *DmsHandler) GetVehicle(ctx *fiber.Ctx) error {
 	c, cancel := context.WithTimeout(ctx.Context(), 30*time.Second)
 	defer cancel()
 
-	var dataFilter entity.GeneralQueryFilter
+	var dataFilter dto.GeneralQueryFilter
 
 	if err := ctx.QueryParser(&dataFilter); err != nil {
 		panic(exception.NewBadRequestHandler(err.Error()))
@@ -45,7 +49,7 @@ func (handler *DmsHandler) GetVehicle(ctx *fiber.Ctx) error {
 	response, paging, err := handler.dmsService.GetVehicle(c, dataFilter)
 	helper.ErrorPanic(err)
 
-	webResponse := entity.Response{
+	webResponse := dto.Response{
 		Code:   fiber.StatusOK,
 		Status: "OK",
 		Data:   response,
